--- a/addform/cssfolder/indexphp.css
+++ b/addform/cssfolder/indexphp.css
@@ -94,7 +94,7 @@ a{
     width: 100% !important; 
     /* !important */
 
-    height: 40rem;
+    height: 30rem;
     /* display: none; */
     /* margin-left: -90rem; */
     /* transition: 0.6s;    */
@@ -158,5 +158,64 @@ a{
 }
 .contact-Icone{
     display: flex;
+    
+}
+.card{
+    border: 2px black solid;
+    margin: 20px;
+    padding: 15px;
+}
+.course-card{
+    display: flex;
+    justify-content: space-around;
+}
+.card img:hover{
+    /* width: 20px; */
+    transform: scale(1.05);
+}
+.course-selection{
+    text-align: center;
+    margin: 50px 0;
+}
+.course-search{
+    display: flex;
+    /* justify-content: center; */
+    /* justify-content: space-between; */
+    justify-content: space-evenly;
+    margin: 30px 120px 30px 120px;
+    
+}
+.search-button input{
    
+     /* padding: 10px;     */
+     position: relative;
+    width: 224px;
+    height: 50px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    background: #ff8a00;
+}
+#arrow-btn{
+   
+    
+     position: relative;
+    width: 35px;
+    height: 50px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    background: #ff8a00;
+}
+.search-field input{
+    height: 43px;
+    width: 300px;
+    background-color: #f2f1f8;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding-left: 15px;
+}
+.search-field input:hover{
+    border-bottom: 5px #ff8a00 solid;
 }
